# dm_arm_control

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
dm_arm_control/: __init__.py  arm_movement_server.py  joint_driver_server.py  kinematics_service.py
dm_arm_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: test_arm_movement.py
